<?xml version="1.0"?>
<package format="2">

  <!-- Package info -->
  <name>rise_assembler_control</name>
  <version>0.0.0</version>
  <description>The rise_abb_irb120 package</description>
  <maintainer email="susung@todo.todo">susung</maintainer>
  <license>TODO</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
